--- a/documentation/getting_started.html
+++ b/documentation/getting_started.html
@@ -11,7 +11,7 @@ documentation_selected: selected
     <p>We've worked hard to make Uranium as streamlined as possible, requiring the least possible effort from the user.</p>
     <p>Part of this is ensuring that the widgets are easy to use and once you've learned how to implement one, the same methods are easily applied to other widgets.</p>
     <p>As such, here we're going to go over an example of how to use widgets. We'll use the <a href="{{site.baseurl}}interactions/toggler.html">toggler</a> as a model.</p>
-    <p><em>Prerequisities:</em> make sure you have a simple HTML page set up with a script tag for <a href="https://developers.google.com/speed/libraries/devguide#jquery">jQuery v1.9.1</a> and <a href="/download.html">Uranium</a>.</p>
+    <p><em>Prerequisities:</em> make sure you have a simple HTML page set up with a script tag for <a href="https://developers.google.com/speed/libraries/devguide#jquery">jQuery v1.9.1</a> and <a href="{{site.baseurl}}download.html">Uranium</a>.</p>
   </div>
 
   <div id="toggler-tutorial">
@@ -99,7 +99,7 @@ documentation_selected: selected
     
     <h3>Second Step: Don't forget the JavaScript</h3>
     <p>We've added all the necessary attributes to the HTML. The next job is to make sure we have Uranium running in the page.</p>
-    <p>The Uranium file can be downloaded <a href="download.html">here</a>.</p>
+    <p>The Uranium file can be downloaded <a href="{{site.baseurl}}download.html">here</a>.</p>
     <p>Include it in your project folder, and add an appropriate reference to it in the head of the HTML.</p>
     
     <h3>Third Step: Changing the CSS</h3>
@@ -148,6 +148,6 @@ documentation_selected: selected
       Pretty much all the interactions in Uranium work in a similar way. You add special attributes to the tags in your HTML, import the JavaScript, and maybe do a little CSS re-styling.
     </p>
     <p>
-      Now we've whetted your appetite, you probably want to check out some more interactions. If you want to go through another tutorial, we have <a href="./advanced.html">an advanced tutorial</a> that covers how to implement a carousel with some custom features, all without writing a single line of JavaScript.
+      Now we've whetted your appetite, you probably want to check out some more interactions. If you want to go through another tutorial, we have <a href="{{site.baseurl}}documentation/advanced.html">an advanced tutorial</a> that covers how to implement a carousel with some custom features, all without writing a single line of JavaScript.
     </p>
 <div>
