--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -65,9 +65,9 @@ documentation_selected: selected
 
     <section id="interaction_sets">
       <h2 name="sets">Interaction Sets and Components</h2>
-      <p>Every interaction has at its core a set and a series of components. The set is unique for every interaction: <code>data-ur-set="toggler"</code> for the <a href="/interactions/toggler.html">toggler</a> interaction, etc. The set attribute should be used to wrap the whole interaction.</p>
+      <p>Every interaction has at its core a set and a series of components. The set is unique for every interaction: <code>data-ur-set="toggler"</code> for the <a href="{{site.baseurl}}interactions/toggler.html">toggler</a> interaction, etc. The set attribute should be used to wrap the whole interaction.</p>
       <p>There are usually a few components per interaction. Some may be required to get the interaction to work, but most are usually optional. For example, a toggler has a button and content, and at least one of each is required if you want the interaction to work. Components are designated in the following way: they'll have <code>data-ur-{interaction}-component="thing"</code>.</p>
-      <p>Most of the interactions also have some extra options. For example, <a href="/interactions/carousel.html"> carousel</a> has an optional <code>data-ur-carousel-component="count"</code>, which is used to display the count of the currently selected item in a carousel.</p>
+      <p>Most of the interactions also have some extra options. For example, <a href="{{site.baseurl}}interactions/carousel.html"> carousel</a> has an optional <code>data-ur-carousel-component="count"</code>, which is used to display the count of the currently selected item in a carousel.</p>
     </section>
 
     <section id="recommended_styles">
@@ -82,8 +82,8 @@ documentation_selected: selected
       <h3>Tutorials</h3>
       <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium use-case. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful JavaScript interactions just by adding a few declarative elements to your HTML.</p>
       <ul>
-        <li><a href="/documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
-        <li><a href="/documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
+        <li><a href="{{site.baseurl}}documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
+        <li><a href="{{site.baseurl}}documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
       </ul>
       <h3>Additional Documentation</h3>
       <p>We've written up some more detailed notes on some of the ways in which Uranium is unique. Uranium is not trying to be all things to all people, but for those who need something lightweight, unopinionated, and focused on injecting simple interactions in a declarative manner, Uranium just may be the answer.</p>
