--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="/interactions/carousel.html" class="see_more_link">More about carousel</a>
+    <a href="{{site.baseurl}}interactions/carousel.html" class="see_more_link">More about carousel</a>
   </div>
   <hr>
 
@@ -152,7 +152,7 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="/interactions/tabs.html" class="see_more_link">More about tabs</a>
+    <a href="{{site.baseurl}}interactions/tabs.html" class="see_more_link">More about tabs</a>
   </div>
   <hr>
   
@@ -197,7 +197,7 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="/interactions/toggler.html" class="see_more_link">More about toggler</a>
+    <a href="{{site.baseurl}}interactions/toggler.html" class="see_more_link">More about toggler</a>
   </div>
   <hr>
   
