--- a/interactions/geocode/button.html
+++ b/interactions/geocode/button.html
@@ -5,7 +5,7 @@ name: geocode_button
 interaction_selected: selected
 ---
 <h2>Description</h2>
-<p>Here, instead of the interaction loading automatically (as on the <a href="geocode.html">interaction page</a>), we
+<p>Here, instead of the interaction loading automatically (as on the <a href="{{site.baseurl}}interactions/geocode.html">interaction page</a>), we
   have a button that needs to be clicked in order for it to be activated.</p>
 <p>We recommend using a button to enable geolocation, especially if designing for mobile. If geocoding happens on page load, the user will see a popup asking the site to use their location. If they click "no," it is difficult to get the information later on. That is why it is best to get geo-data only when a user requests it.</p>
 
