update drawer example

--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -4,7 +4,7 @@ title: Toggler
 name: toggler
 interaction_selected: selected
 description: |
-    <p>A toggler is an interaction that coordinates two components - a button, and a set of contents.</p>
+    <p>A toggler is an interaction that coordinates two components &mdash; a button, and a set of contents.</p>
     <p>When you click the button, the states of both the button and the contents are toggled.</p>
 basic_tab:
   data-ur-set="toggler": add this attribute to an element that wraps the whole interaction
@@ -23,7 +23,7 @@ advanced_tab:
   Optional:
     drawer:
       - enables sliding menus for togglers on the body element
-      - sample implementation uses custom Webkit-specific flexbox CSS for recommended functionality
+      - sample implementation uses custom flexbox CSS for recommended functionality
       - "multiple?: false"
       - "state: enabled / disabled (default)"
 js_tab:
@@ -178,4 +178,4 @@ js_tab:
 
 <h3>Toggler Drawer Example</h3>
 <a href="{{site.baseurl}}interactions/drawer.html" target="_blank">Demonstrates styling and formatting for a horizontal sliding menu</a>
-<p>Note: This example uses WebKit-specific CSS to activate the visual drawer behavior, but the Uranium behavior is the same across all browsers, and you may implement the visual effects any way you prefer.</p>
+<p>Note: This example uses flexbox CSS to activate the visual drawer behavior, but the Uranium behavior is the same across all browsers, and you may implement the visual effects any way you prefer.</p>
