--- a/documentation/advanced.html
+++ b/documentation/advanced.html
@@ -128,7 +128,7 @@ documentation_selected: selected
     <pre data-lang="html">{{ tmp | xml_escape }}</pre>
     <p>Within the "dots" <code>&lt;div&gt;</code>, we have a number of <code>&lt;div&gt;</code> children with two attributes &mdash; one specifying it as a "dot" and one showing the state. The <code>data-ur-state</code> of "active" is applied when the corresponding item is highlighted. So, for the example above, the fourth image will be highlighted. Currently the dots have no style associated with them, so you won't be able to see them. Feel free to style them as you like!</p>
     <div data-ur-set="toggler" class="qna">
-      <div data-ur-toggler-component="button">Some sample styles similar to the ones we use in our original example</div>
+      <a href="javascript:void(0)" data-ur-toggler-component="button">Some sample styles similar to the ones we use in our original example</a>
       <div data-ur-toggler-component="content">
         <pre data-lang="css">
         [data-ur-carousel-component="dot"] {
