adding collapse / expand capability to toggler

--- a/examples/index.html
+++ b/examples/index.html
@@ -415,7 +415,7 @@
     </div>
     <div data-ur-set='toggler'>
       <div data-ur-toggler-component='button'>Click Here2!</div>
-      <ul data-ur-toggler-component='content'>
+      <ul data-ur-toggler-component='content' data-ur-collapsible='enabled'>
         <li> Hat </li>
         <li> Socks </li>
         <li> Shoes </li>
