--- a/documentation/advanced.html
+++ b/documentation/advanced.html
@@ -141,7 +141,7 @@ documentation_selected: selected
           height: 10px;
         }
         data-ur-carousel-component="dot"][data-ur-state="inactive"] {
-          opacity: 0.3;
+          background: #bbb;
         }
         </pre>
       </div>
