moving data-ur-colapsible from content to the toggled itself

--- a/examples/index.html
+++ b/examples/index.html
@@ -413,9 +413,9 @@
         <li> Shirts </li>
       </ul>
     </div>
-    <div data-ur-set='toggler'>
+    <div data-ur-set='toggler' data-ur-collapsible='enabled'>
       <div data-ur-toggler-component='button'>Click Here2!</div>
-      <ul data-ur-toggler-component='content' data-ur-collapsible='enabled'>
+      <ul data-ur-toggler-component='content'>
         <li> Hat </li>
         <li> Socks </li>
         <li> Shoes </li>
