update zoom carousel example

--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -89,6 +89,7 @@ js_tab:
       display: inline-block;
       overflow: hidden;
       position: relative;
+      max-width: 100%; // for when zoom is combined with carousel
     }
     
     [data-ur-zoom-component="img"] {
@@ -116,6 +117,7 @@ js_tab:
       display: inline-block;
       overflow: hidden;
       position: relative;
+      max-width: 100%; // for when zoom is combined with carousel
     }
     
     [data-ur-zoom-component="img"] {
@@ -205,4 +207,3 @@ js_tab:
     <pre data-lang="html">{{ tmp | xml_escape }}</pre>
   </div>
 </div>
-
